--- a/index.html
+++ b/index.html
@@ -18,24 +18,6 @@
         <a class="header-login pull-right " href="login.html" > 注册|登录 </a>
         <h1 class="title"></h1>
     </header>
-    <footer class="bar bar-tab">
-        <a class="tab-item " href="javascript:;">
-            <span class="icon icon-home"></span>
-            <span class="tab-label">首页</span>
-        </a>
-        <a class="tab-item" href="javascript:;">
-            <span class="icon icon-clock"></span>
-            <span class="tab-label">报表</span>
-        </a>
-        <a class="tab-item" href="javascript:;">
-            <span class="icon icon-message"></span>
-            <span class="tab-label">客服</span>
-        </a>
-        <a id="goaboutme" class="tab-item" href="javascript:;">
-            <span class="icon icon-me"></span>
-            <span class="tab-label">我的</span>
-        </a>
-    </footer>
     <section class="native-scroll scroll-top">
         <div class="swiper-container swiper-container-horizontal swiper-container-fade" data-space-between="10" id="Banner">
             <div class="swiper-wrapper" style="transition-duration: 0ms;">
@@ -49,11 +31,27 @@
         </div>
         <div class="menu-content">
             <div class="row content-padded menu-btn" >
-                <div class="col-25"><a href="recharge.html" class="button  btn-angle" >存款</a></div>
-                <div class="col-25"><a href="bonus.html" class="button  btn-angle">优惠</a></div>
-                <div class="col-25"><a href="withdrawal.html" class="button  btn-angle">取款</a></div>
-                <div class="col-25"><a href="trans.html" class="button  btn-angle">转账</a></div>
+                <div class="col-50">
+                    <div class="row">
+                        <div class="col-50-cs"><a href="recharge.html" class="button  btn-angle" >存款</a></div>
+                        <div class="col-50"><a href="bonus.html" class="button  btn-angle">优惠</a></div>
+                    </div>
+                    <div class="row" style="margin-top:0.5rem;">
+                        <div class="col-50-cs"><a href="withdrawal.html" class="button  btn-angle">取款</a></div>
+                        <div class="col-50"><a href="trans.html" class="button  btn-angle">转账</a></div>
+                    </div>
+                </div>
+                <div class="col-50">
+                    <div class="row">
+                        <div class="col-100" style="text-align: center"><p>累计奖池</p></div>
+                    </div>
+                    <div class="row" style="margin-top: -1rem;">
+                        <div class="col-100"><p>333,333,333,33.88</p></div>
+                    </div>
+                </div>
+
             </div>
+
         </div>
         <div class="customtit notice">
             <div class="bd">
@@ -66,23 +64,59 @@
 
         <div class="content-padded gamepic">
             <div class="row">
-                <div class="col-50"><a href="slot.html"><img src="./image/g1.jpg" alt="pt老虎机"></a></div>
-                <div class="col-50"><a href="slot.html"><img src="./image/g2.jpg" alt="MG老虎机"></a></div>
+                <div class="col-50"><a href="slot.html"><img src="./image/game_01.png"><p class="text-left">AG视讯</p></a></div>
+                <div class="col-50"><a href="slot.html"><img src="./image/game_03.png"><p class="text-right">波音视讯</p></a></div>
             </div>
         </div>
         <div class="content-padded gamepic">
             <div class="row">
-                <div class="col-50"><a href="slot.html" target="_blank" ><img src="./image/g3.jpg" alt="GG捕鱼"></a></div>
-                <div class="col-50"><a href="slot.html" target="_blank" ><img src="./image/g4.jpg" alt="AG百家乐"></a></div>
+                <div class="col-50"><a href="slot.html"><img src="./image/game_02.png"><p class="text-left">体育赛事</p></a></div>
+                <div class="col-50"><a href="slot.html"><img src="./image/game_04.png"><p class="text-right">PT老虎机</p></a></div>
             </div>
         </div>
         <div class="content-padded gamepic">
             <div class="row">
-                <div class="col-50"><a href="slot.html"  target="_blank" external=""><img src="./image/g-bbin-min.jpg" alt="BBIN"></a></div>
-                <div class="col-50"><a href="slot.html" target="_blank" ><img src="./image/g-tyc-min.jpg" alt="太阳城"></a></div>
+                <div class="col-50"><a href="slot.html"><img src="./image/game_03.png"><p class="text-left">MG老虎机</p></a></div>
+                <div class="col-50"><a href="slot.html"><img src="./image/game_04.png"><p class="text-right">QT老虎机</p></a></div>
+            </div>
+        </div>
+        <div class="content-padded gamepic">
+            <div class="row">
+                <div class="col-50"><a href="slot.html"><img src="./image/game_03.png"><p class="text-left">DT老虎机</p></a></div>
+                <div class="col-50"><a href="slot.html"><img src="./image/game_04.png"><p class="text-right">TTG老虎机</p></a></div>
+            </div>
+        </div>
+        <div class="content-padded gamepic">
+            <div class="row">
+                <div class="col-50"><a href="slot.html"><img src="./image/game_03.png"><p class="text-left">RTG老虎机</p></a></div>
+                <div class="col-50"><a href="slot.html"><img src="./image/game_04.png"><p class="text-right">PNG老虎机</p></a></div>
+            </div>
+        </div>
+        <div class="content-padded gamepic">
+            <div class="row">
+                <div class="col-50"><a href="slot.html"><img src="./image/game_03.png"><p class="text-left">18体育</p></a></div>
+                <div class="col-50"><a href="slot.html"><img src="./image/game_04.png"><p class="text-right">ysb体育</p></a></div>
             </div>
         </div>
     </section>
+    <footer class="bar bar-tab page-fixed footer-button">
+        <a class="tab-item " href="javascript:;">
+            <span class="icon icon-home"></span>
+            <span class="tab-label">首页</span>
+        </a>
+        <a class="tab-item" href="javascript:;">
+            <span class="icon icon-browser"></span>
+            <span class="tab-label">报表</span>
+        </a>
+        <a class="tab-item" href="javascript:;">
+            <span class="icon icon-message"></span>
+            <span class="tab-label">客服</span>
+        </a>
+        <a id="goaboutme" class="tab-item" href="javascript:;">
+            <span class="icon icon-me"></span>
+            <span class="tab-label">我的</span>
+        </a>
+    </footer>
 </div>
 <script src="./js/zepto.min.js"></script>
 <script type="text/javascript" src="./js/sm.min.js" charset="utf-8"></script>
