--- a/index.html
+++ b/index.html
@@ -42,16 +42,11 @@
                     </div>
                 </div>
                 <div class="col-50">
-                    <div class="row">
-                        <div class="col-100" style="text-align: center"><p>累计奖池</p></div>
-                    </div>
-                    <div class="row" style="margin-top: -1rem;">
-                        <div class="col-100"><p>333,333,333,33.88</p></div>
-                    </div>
+                    <p class="jackpot-text">累计奖池</p>
+                    <p class="jackpot-cash">12,122,222,222.12</p>
                 </div>
 
             </div>
-
         </div>
         <div class="customtit notice">
             <div class="bd">
