--- a/slot.html
+++ b/slot.html
@@ -1,10 +1,91 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
-    <meta charset="UTF-8">
-    <title>Title</title>
+    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+    <title>手机网页版 </title>
+    <meta name="viewport" content="initial-scale=1, maximum-scale=1">
+    <meta name="apple-mobile-web-app-capable" content="yes">
+    <meta name="apple-mobile-web-app-status-bar-style" content="black">
+    <link rel="stylesheet" href="css/index.css">
+    <link rel="stylesheet" href="css/hy-extend.css">
+    <link href="css/common.css" rel="stylesheet">
+    <meta name="Keywords" content="虎游娱乐城 PT电子 TTG电子 MG电子 GG捕鱼">
 </head>
 <body>
-
+<div class=" page-group page-current content">
+    <header class="bar header-nav">
+        <a class="button header-login pull-left logo" href="/"><img src="./image/logo.png" alt="虎游娱乐城"></a>
+        <a class="header-login pull-right " href="login.html" > 注册|登录 </a>
+        <h1 class="title"></h1>
+    </header>
+    <section class="native-scroll scroll-top">
+        <div class="swiper-container swiper-container-horizontal swiper-container-fade" data-space-between="10" id="Banner">
+            <div class="swiper-wrapper" style="transition-duration: 0ms;">
+                <div class="swiper-slide" style="width: 1280px; height: 160px; background: url('/image/banner_01.jpg') center center no-repeat; transform: translate3d(0px, 0px, 0px); transition-duration: 0ms; opacity: 1;"></div>
+                <div class="swiper-slide" style="width: 1280px; height: 160px; background: url('/image/banner_02.jpg') center center no-repeat; transform: translate3d(-1280px, 0px, 0px); transition-duration: 0ms; opacity: 1;"></div>
+            </div>
+            <div class="swiper-pagination swiper-pagination-clickable">
+                <span class="swiper-pagination-bullet"></span>
+                <span class="swiper-pagination-bullet"></span>
+            </div>
+        </div>
+        <div class="menu-content-bandit">
+            <div class="row menu-btn-bandit menu-bandit-left" >
+                <div class="col-4-bt "><a href="recharge.html" class="button  btn-bandit" >PT老虎机</a></div>
+                <div class="col-4-bt"><a href="bonus.html" class="button  btn-bandit">MG老虎机</a></div>
+                <div class="col-4-bt"><a href="withdrawal.html" class="button  btn-bandit">QT老虎机</a></div>
+                <div class="col-4-bt"><a href="trans.html" class="button  btn-bandit">DT老虎机</a></div>
+                <div class="col-4-bt "><a href="recharge.html" class="button  btn-bandit" >PT老虎机</a></div>
+                <div class="col-4-bt"><a href="bonus.html" class="button  btn-bandit">MG老虎机</a></div>
+                <div class="col-4-bt"><a href="withdrawal.html" class="button  btn-bandit">QT老虎机</a></div>
+                <div class="col-4-bt"><a href="trans.html" class="button  btn-bandit">DT老虎机</a></div>
+            </div>
+        </div>
+        <div class="content-padded gamepic">
+            <div class="row targer-text">
+                <div class="col-33"><a href="slot.html"><img src="./image/targer_01.png"><span>招财进宝</span></a></div>
+                <div class="col-33"><a href="slot.html"><img src="./image/targer_02.png"><span>海盗船</span></a></div>
+                <div class="col-33"><a href="slot.html"><img src="./image/targer_03.png"><span>暴力摩托</span></a></div>
+                <div class="col-33"><a href="slot.html"><img src="./image/targer_01.png"><span>招财进宝</span></a></div>
+                <div class="col-33"><a href="slot.html"><img src="./image/targer_02.png"><span>海盗船</span></a></div>
+                <div class="col-33"><a href="slot.html"><img src="./image/targer_03.png"><span>暴力摩托</span></a></div>
+                <div class="col-33"><a href="slot.html"><img src="./image/targer_01.png"><span>招财进宝</span></a></div>
+                <div class="col-33"><a href="slot.html"><img src="./image/targer_02.png"><span>海盗船</span></a></div>
+                <div class="col-33"><a href="slot.html"><img src="./image/targer_03.png"><span>暴力摩托</span></a></div>
+            </div>
+        </div>
+    </section>
+    <footer class="bar bar-tab page-fixed footer-button">
+        <a class="tab-item " href="javascript:;">
+            <span class="icon icon-home"></span>
+            <span class="tab-label">首页</span>
+        </a>
+        <a class="tab-item" href="javascript:;">
+            <span class="icon icon-browser"></span>
+            <span class="tab-label">报表</span>
+        </a>
+        <a class="tab-item" href="javascript:;">
+            <span class="icon icon-message"></span>
+            <span class="tab-label">客服</span>
+        </a>
+        <a id="goaboutme" class="tab-item" href="javascript:;">
+            <span class="icon icon-me"></span>
+            <span class="tab-label">我的</span>
+        </a>
+    </footer>
+</div>
+<script src="./js/zepto.min.js"></script>
+<script type="text/javascript" src="./js/sm.min.js" charset="utf-8"></script>
+<script type="text/javascript" src="./js/sm-extend.min.js" charset="utf-8"></script>
+<script src="./js/all.js"></script>
+<script type="text/javascript">
+    $("#Banner").swiper({
+        effect: 'fade',
+        autoplay: 3000,
+        autoplayDisableOnInteraction: false,
+        pagination: '.swiper-pagination',
+        paginationClickable: '.swiper-pagination'
+    });
+</script>
 </body>
 </html>
