--- a/bonus.html
+++ b/bonus.html
@@ -1,10 +1,104 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
-    <meta charset="UTF-8">
-    <title>Title</title>
+    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+    <title>体育赛事 - 手机网页版 </title>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="apple-mobile-web-app-capable" content="yes">
+    <meta name="apple-mobile-web-app-status-bar-style" content="black">
+    <link rel="stylesheet" href="css/index.css">
+    <link rel="stylesheet" href="css/hy-extend.css">
+    <link href="css/common.css" rel="stylesheet">
+    <meta name="Keywords" content="虎游娱乐城 PT电子 TTG电子 MG电子 GG捕鱼">
 </head>
 <body>
-
+<div class=" page-group page-current content">
+    <header class="bar header-nav">
+        <a class="button header-login pull-left logo" href="/"><img src="./image/logo.png" alt="虎游娱乐城"></a>
+        <a class="header-login pull-right " href="login.html" > 注册|登录 </a>
+        <h1 class="title"></h1>
+    </header>
+    <section class="native-scroll scroll-top">
+        <div class="video-bg"><img src="image/vip_banner.png"></div>
+        <div class="content-padded gamepic">
+            <div class="row targer-text">
+                <div class="col-100">
+                    <div class="table-responsive ">
+                        <table class="table-bordered">
+                            <thead>
+                            <tr>
+                                <th>等级</th>
+                                <th>申请条件</th>
+                                <th>每月免费筹码</th>
+                                <th>电邮次存惠</th>
+                            </tr>
+                            </thead>
+                            <tbody>
+                            <tr>
+                                <td>Table cell</td>
+                                <td>Table cell</td>
+                                <td>Table cell</td>
+                                <td>Table cell</td>
+                            </tr>
+                            <tr>
+                                <td>Table cell</td>
+                                <td>Table cell</td>
+                                <td>Table cell</td>
+                                <td>Table cell</td>
+                            </tr>
+                            <tr>
+                                <td>Table cell</td>
+                                <td>Table cell</td>
+                                <td>Table cell</td>
+                                <td>Table cell</td>
+                            </tr>
+                            </tbody>
+                        </table>
+                    </div>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-100" >
+                    <div class="bonus-line">
+                        <img src="image/bonus_line.png">
+                    </div>
+                    <div class="bonus-line-title"><p>优惠细则</p></div>
+                    <div class="bonus-line-text">
+                        <p>1.每个月5号之前系统自动审核进行升级；系统以晋级条件中的投注额来进行升级。</p>
+                        <p>2.晋级计算时间为单月1号0:00至最后一天23:59:59截止。</p>
+                        <p>3.玩家达到条件后可以登陆虎游娱乐城官网的"个人中心-优惠申请-自助晋级"进行申请。为避免套利和非正常投注的玩家,投注额为申请条件之一，其次需要经过相关部门综合审核后，给予晋级并派发晋级礼金。</p>
+                        <p>4.玩家每月只享有一次晋级的机会，且每个玩家只能享受一次每个等级的晋级礼金。</p>
+                        <p>5.VIP的降级每月三号由系统自动审核，未达到保持VIP的要求将自动降一级，将不再另行通知。例如，会员在1月晋升VIP，则在2月3日进行审核。</p>
+                        <p>6.晋级礼金，生日礼金及每月免费筹码，均无需流水，可直接提款。(ps.生日礼金需当天找在线客服申请)。</p>
+                        <p>7.所有VIP会员享受的优惠按照系统自动晋级时的等级为准派发，若有相关活动疑问请及时联系专属客服服务。</p>
+                        <p>8.虎游娱乐拥有最终解释权和裁决权。</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+    <footer class="bar bar-tab page-fixed footer-button">
+        <a class="tab-item " href="/">
+            <span class="icon icon-home"></span>
+            <span class="tab-label">首页</span>
+        </a>
+        <a class="tab-item" href="report.html">
+            <span class="icon icon-browser"></span>
+            <span class="tab-label">报表</span>
+        </a>
+        <a class="tab-item" href="javascript:;">
+            <span class="icon icon-message"></span>
+            <span class="tab-label">客服</span>
+        </a>
+        <a id="goaboutme" class="tab-item" href="user.html">
+            <span class="icon icon-me"></span>
+            <span class="tab-label">我的</span>
+        </a>
+    </footer>
+</div>
+<script src="./js/zepto.min.js"></script>
+<script type="text/javascript" src="./js/sm.min.js" charset="utf-8"></script>
+<script type="text/javascript" src="./js/sm-extend.min.js" charset="utf-8"></script>
+<script src="./js/all.js"></script>
 </body>
 </html>
