--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
                     </div>
                     <div class="row" style="margin-top:0.5rem;">
                         <div class="col-50-cs"><a href="withdrawal.html" class="button  btn-angle">取款</a></div>
-                        <div class="col-50"><a href="trans.html" class="button  btn-angle">转账</a></div>
+                        <div class="col-50"><a href="user.html" class="button  btn-angle">转账</a></div>
                     </div>
                 </div>
                 <div class="col-50">
@@ -59,13 +59,13 @@
 
         <div class="content-padded gamepic">
             <div class="row">
-                <div class="col-50"><a href="slot.html"><img src="./image/game_01.png"><p class="text-left">AG视讯</p></a></div>
-                <div class="col-50"><a href="slot.html"><img src="./image/game_03.png"><p class="text-right">波音视讯</p></a></div>
+                <div class="col-50"><a href="video_game.html"><img src="./image/game_01.png"><p class="text-left">AG视讯</p></a></div>
+                <div class="col-50"><a href="video_game.html"><img src="./image/game_03.png"><p class="text-right">波音视讯</p></a></div>
             </div>
         </div>
         <div class="content-padded gamepic">
             <div class="row">
-                <div class="col-50"><a href="slot.html"><img src="./image/game_02.png"><p class="text-left">体育赛事</p></a></div>
+                <div class="col-50"><a href="sport.html"><img src="./image/game_02.png"><p class="text-left">体育赛事</p></a></div>
                 <div class="col-50"><a href="slot.html"><img src="./image/game_04.png"><p class="text-right">PT老虎机</p></a></div>
             </div>
         </div>
@@ -95,11 +95,11 @@
         </div>
     </section>
     <footer class="bar bar-tab page-fixed footer-button">
-        <a class="tab-item " href="javascript:;">
+        <a class="tab-item " href="/">
             <span class="icon icon-home"></span>
             <span class="tab-label">首页</span>
         </a>
-        <a class="tab-item" href="javascript:;">
+        <a class="tab-item" href="report.html">
             <span class="icon icon-browser"></span>
             <span class="tab-label">报表</span>
         </a>
@@ -107,7 +107,7 @@
             <span class="icon icon-message"></span>
             <span class="tab-label">客服</span>
         </a>
-        <a id="goaboutme" class="tab-item" href="javascript:;">
+        <a id="goaboutme" class="tab-item" href="user.html">
             <span class="icon icon-me"></span>
             <span class="tab-label">我的</span>
         </a>
