--- a/register.html
+++ b/register.html
@@ -29,17 +29,37 @@
             <section class="form-input-group">
                 <div class="form-input-box pwdTip">
                     <span class="form-input-icon form-input-iconlock"></span>
-                    <input type="password" name="password" id="password" autocomplete="off" placeholder="请输入登录密码（6-16位数字及字母）">
+                    <input type="password" name="password" id="password" autocomplete="off" placeholder="请输入登录密码">
                 </div>
             </section>
+            <section class="form-input-group">
+                <div class="form-input-box pwdTip">
+                    <span class="form-input-icon form-input-name"></span>
+                    <input type="password" name="password" id="realname" autocomplete="off" placeholder="请填写您真实姓名">
+                </div>
+            </section>
+            <section class="form-input-group">
+                <div class="form-input-box pwdTip">
+                    <span class="form-input-icon form-input-iconphone"></span>
+                    <input type="password" name="password" id="phone" autocomplete="off" placeholder="请输入手机号码">
+                </div>
+            </section>
+            <section class="form-input-group">
+                <div class="form-input-box pwdTip">
+                    <span class="form-input-icon form-input-mail"></span>
+                    <input type="password" name="password" id="email" autocomplete="off" placeholder="请输入联系邮箱">
+                </div>
+            </section>
+        </section>
+
             <section class="form-btn-wrap mb8px">
                 <input type="submit" class="form-btn form-btn-blue" id="submit-next" data-lock="false" value="登录">
             </section>
+
         </form>
-        <section class="form-btn-wrap mb2px">
-            <a href="" class="fl blue2 f12">忘记密码？</a>
-            <a href="register.html" class="fr blue2 f12">没有账号，立即注册</a>
-        </section>
+    <section class="form-btn-wrap mb2px">
+        <a type="submit" class="form-btn form-btn-red"  data-lock="false">已有账号，我要登录</a>
+    </section>
     </section>
     <footer class="bar bar-tab page-fixed footer-button">
         <a class="tab-item " href="/">
