--- a/slot.html
+++ b/slot.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-    <title>手机网页版 </title>
+    <title>老虎机 - 手机网页版 </title>
     <meta name="viewport" content="initial-scale=1, maximum-scale=1">
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-status-bar-style" content="black">
@@ -31,14 +31,14 @@
         </div>
         <div class="menu-content-bandit">
             <div class="row menu-btn-bandit menu-bandit-left" >
-                <div class="col-4-bt "><a href="recharge.html" class="button  btn-bandit" >PT老虎机</a></div>
-                <div class="col-4-bt"><a href="bonus.html" class="button  btn-bandit">MG老虎机</a></div>
-                <div class="col-4-bt"><a href="withdrawal.html" class="button  btn-bandit">QT老虎机</a></div>
-                <div class="col-4-bt"><a href="trans.html" class="button  btn-bandit">DT老虎机</a></div>
-                <div class="col-4-bt "><a href="recharge.html" class="button  btn-bandit" >PT老虎机</a></div>
-                <div class="col-4-bt"><a href="bonus.html" class="button  btn-bandit">MG老虎机</a></div>
-                <div class="col-4-bt"><a href="withdrawal.html" class="button  btn-bandit">QT老虎机</a></div>
-                <div class="col-4-bt"><a href="trans.html" class="button  btn-bandit">DT老虎机</a></div>
+                <div class="col-4-bt"><a href="slot.html" class="button  btn-bandit" >PT老虎机</a></div>
+                <div class="col-4-bt"><a href="slot.html" class="button  btn-bandit">MG老虎机</a></div>
+                <div class="col-4-bt"><a href="slot.html" class="button  btn-bandit">QT老虎机</a></div>
+                <div class="col-4-bt"><a href="slot.html" class="button  btn-bandit">DT老虎机</a></div>
+                <div class="col-4-bt"><a href="slot.html" class="button  btn-bandit" >PT老虎机</a></div>
+                <div class="col-4-bt"><a href="slot.html" class="button  btn-bandit">MG老虎机</a></div>
+                <div class="col-4-bt"><a href="slot.html" class="button  btn-bandit">QT老虎机</a></div>
+                <div class="col-4-bt"><a href="slot.html" class="button  btn-bandit">DT老虎机</a></div>
             </div>
         </div>
         <div class="content-padded gamepic">
@@ -56,7 +56,7 @@
         </div>
     </section>
     <footer class="bar bar-tab page-fixed footer-button">
-        <a class="tab-item " href="javascript:;">
+        <a class="tab-item " href="/">
             <span class="icon icon-home"></span>
             <span class="tab-label">首页</span>
         </a>
