--- a/report.html
+++ b/report.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-    <title>体育赛事 - 手机网页版 </title>
+    <title>报表记录 - 手机网页版 </title>
     <meta name="viewport" content="initial-scale=1, maximum-scale=1">
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-status-bar-style" content="black">
@@ -15,30 +15,19 @@
 <div class="page-group-form page-current content">
     <header class="bar header-nav">
         <a class="button header-login pull-left logo" href="/"><img src="./image/logo.png" alt="虎游娱乐城"></a>
-        <a class="header-login pull-right " href="login.html" > 注册|登录 </a>
+        <a class="header-login pull-right " href="user.html" >欢迎您，123456 </a>
+        <!--<a class="header-login pull-right " href="login.html" >注册|登录 </a>-->
         <h1 class="title"></h1>
     </header>
     <section class="native-scroll scroll-top">
-        <form action="" method="post" id="login_form" class="form-group">
-            <section class="form-input-group mt1">
-                <div class="form-input-box">
-                    <span class="form-input-icon form-input-param"></span>
-                    <input type="text" name="username" autocomplete="off" id="username" placeholder="会员账号" value="">
-                </div>
-            </section>
-            <section class="form-input-group">
-                <div class="form-input-box pwdTip">
-                    <span class="form-input-icon form-input-iconlock"></span>
-                    <input type="password" name="password" id="password" autocomplete="off" placeholder="请输入登录密码（6-16位数字及字母）">
-                </div>
-            </section>
-            <section class="form-btn-wrap mb8px">
-                <input type="submit" class="form-btn form-btn-blue" id="submit-next" data-lock="false" value="登录">
-            </section>
-        </form>
-        <section class="form-btn-wrap mb2px">
-            <a href="" class="fl blue2 f12">忘记密码？</a>
-            <a href="register.html" class="fr blue2 f12">没有账号，立即注册</a>
+        <section class="report_cash">
+            <a href="javascript:;" class="v4-management-report">用户报表</a>
+        </section>
+        <section class="report_list mb3px">
+
+            <a href="" class="v4-management">存款记录</a>
+            <a href="" class="v4-management">提款记录</a>
+            <a href="" class="v4-management">优惠记录</a>
         </section>
     </section>
     <footer class="bar bar-tab page-fixed footer-button">
