--- a/sport.html
+++ b/sport.html
@@ -12,34 +12,20 @@
     <meta name="Keywords" content="虎游娱乐城 PT电子 TTG电子 MG电子 GG捕鱼">
 </head>
 <body>
-<div class="page-group-form page-current content">
+<div class=" page-group page-current content">
     <header class="bar header-nav">
         <a class="button header-login pull-left logo" href="/"><img src="./image/logo.png" alt="虎游娱乐城"></a>
         <a class="header-login pull-right " href="login.html" > 注册|登录 </a>
         <h1 class="title"></h1>
     </header>
     <section class="native-scroll scroll-top">
-        <form action="" method="post" id="login_form" class="form-group">
-            <section class="form-input-group mt1">
-                <div class="form-input-box">
-                    <span class="form-input-icon form-input-param"></span>
-                    <input type="text" name="username" autocomplete="off" id="username" placeholder="会员账号" value="">
-                </div>
-            </section>
-            <section class="form-input-group">
-                <div class="form-input-box pwdTip">
-                    <span class="form-input-icon form-input-iconlock"></span>
-                    <input type="password" name="password" id="password" autocomplete="off" placeholder="请输入登录密码（6-16位数字及字母）">
-                </div>
-            </section>
-            <section class="form-btn-wrap mb8px">
-                <input type="submit" class="form-btn form-btn-blue" id="submit-next" data-lock="false" value="登录">
-            </section>
-        </form>
-        <section class="form-btn-wrap mb2px">
-            <a href="" class="fl blue2 f12">忘记密码？</a>
-            <a href="register.html" class="fr blue2 f12">没有账号，立即注册</a>
-        </section>
+        <div class="video-bg"><img src="image/sport_bg.png"></div>
+        <div class="content-padded gamepic">
+            <div class="row targer-text">
+                <div class="col-100"><a href="video_game.html"><img src="./image/sport_ysb.png" alt="YSB体育赛事"></a></div>
+                <div class="col-100"><a href="video_game.html"><img src="./image/sport_m8.png" alt="M8体育赛事"></a></div>
+            </div>
+        </div>
     </section>
     <footer class="bar bar-tab page-fixed footer-button">
         <a class="tab-item " href="/">
@@ -60,9 +46,5 @@
         </a>
     </footer>
 </div>
-<script src="./js/zepto.min.js"></script>
-<script type="text/javascript" src="./js/sm.min.js" charset="utf-8"></script>
-<script type="text/javascript" src="./js/sm-extend.min.js" charset="utf-8"></script>
-<script src="./js/all.js"></script>
 </body>
 </html>
